# climate-x

./: .gitignore  API_STRUCTURE_ANALYSIS.md  README.md  analyzer.py  api_client.py  config.py  logger.py  main.py  models.py  portfolio_data.py  pyproject.toml  reporter.py  validator.py
output/: climate_risk_report.md
task-context/: CX_Task_Portfolio_Summary.md  CX_Task_Portfolio_Summary_(4).xlsx  Climate_X_Spectra_API_v2.0.md  Solutions_Engineer_Challenge.md  Solutions_Engineer_Challenge_July_2025_(3).docx  extract_to_md.py
