[project]
name = "climate-risk-analyzer"
version = "1.0.0"
description = "Climate X Portfolio Risk Analysis Tool"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
